--- a/Web_Programming/ICP_3/Source/RWD Task/css/style.css
+++ b/Web_Programming/ICP_3/Source/RWD Task/css/style.css
@@ -44,12 +44,12 @@
 
 .topheading{
     float: right;
-    font-family: candara;
+    font-family: Lato;
     color: white;
 }
 .header3{
     font-size: 13px;
-    font-family: candara;
+    font-family: Lato;
     color: white;
 }
 .header2{
